--- a/languages/ca.ini
+++ b/languages/ca.ini
@@ -907,7 +907,7 @@ number_decimal_point = "."
 number_thousands_separator = ","
 OAI Server = "Servidor OAI"
 Occupation = "Ocupació"
-od_account_noaccess = "Aquesta usuari no té accés al contingut de Overdrive"
+od_account_noaccess = "Aquesta usuari no té accés al contingut de OverDrive"
 od_account_problem = "Hi ha un problema amb el vostre compte. %%message%%"
 od_audiobook-mp3 = "MP3 audiobook"
 od_audiobook-overdrive = "Escolar audiollibres OverDrive"
@@ -915,24 +915,24 @@ od_avail_avail = "Disponible:"
 od_avail_holds = "Reserves:"
 od_avail_total = "Total de còpies:"
 od_but_cancel_hold = "Cancel·lar la reserva"
-od_but_checkout = "Prestar en Overdrive"
+od_but_checkout = "Prestar en OverDrive"
 od_but_checkout_s = "Prestat"
 od_but_gettitle = "Baixa aquest contingut"
 od_but_gettitle_s = "Descarregar"
-od_but_hold = "Fer una reserva a Overdrive"
+od_but_hold = "Fer una reserva a OverDrive"
 od_but_hold_s = "Fer una reserva"
 od_but_return = "Tornar aquest títol"
-od_cancel_hold = "Cancel·lar la reserva a Overdrive"
+od_cancel_hold = "Cancel·lar la reserva a OverDrive"
 od_checkout = "Préstec a overdrive"
-od_code_connection_failed = "La connexió a Overdrive ha fallat. Si el problema continua, poseu-vos en contacte amb la vostra biblioteca."
+od_code_connection_failed = "La connexió a OverDrive ha fallat. Si el problema continua, poseu-vos en contacte amb la vostra biblioteca."
 od_code_contentnotavail = "Aquest contingut no està disponible a la vostra zona."
 od_code_login_for_avail = "Iniciar sessió per a disponibilitat"
 od_code_resource_not_found = "No s'ha trobat el títol"
-od_content = "Contingut Overdrive"
+od_content = "Contingut OverDrive"
 od_dl_formats = "Formats de descàrrega compatibles"
 od_docheckout_failure = "Aquest títol està exclòs de préstec."
 od_docheckout_success = "Aquest títol els tens en préstec. Caduca el  %%expireDate%%"
-od_early_return = "Overdrive Early Return"
+od_early_return = "OverDrive Early Return"
 od_ebook-epub-adobe = "Adobe EPUB eBook"
 od_ebook-epub-open = "Open EPUB eBook"
 od_ebook-kindle = "Kindle Book"
@@ -941,11 +941,11 @@ od_ebook-overdrive = "OverDrive Read eBook"
 od_ebook-pdf-adobe = "Adobe PDF eBook"
 od_ebook-pdf-open = "Open PDF eBook"
 od_expires_on = "Aquest títol caduca el  %%due_date%%."
-od_get_title = "Descàrrega Overdrive"
+od_get_title = "Descàrrega OverDrive"
 od_gettitle_failure = "Aquest títol no es pot descarregar."
-od_help_linktext = "Ajuda Overdrive"
-od_history = "Histora Overdrive"
-od_hold = "Reserva Overdrive"
+od_help_linktext = "Ajuda OverDrive"
+od_history = "Histora OverDrive"
+od_hold = "Reserva OverDrive"
 od_hold_cancel_failure = "Ha fallat la sol·licitud de cancel·lació."
 od_hold_cancel_success = "La reserva s'ha cancel·lat correctament."
 od_hold_email = "Adreça de correu electrònic per a la notificació: %%holdEmailAddress%%."
@@ -954,12 +954,12 @@ od_hold_place_failure = "La sol·licitud de reserva ha fallat."
 od_hold_place_success = "Aquest títol ha estat posat en reserva. La vostre torn de reserva es el %%holdListPosition%%"
 od_hold_placed_on = "Reserva feta el %%holdPlacedDate%%."
 od_hold_queue = "Posició %%holdPosition%% de %%numberOfHolds%% en torn de reserva."
-od_holds = "Reserves Overdrive"
+od_holds = "Reserves OverDrive"
 od_info_unavail = "Aquesta informació no està disponible actualment."
 od_is_checkedout = "Tens aquest llibre en préstec.  Venciment el  %%due_date%%."
 od_is_on_hold = "Tens reservat aquest llibre."
-od_loans = "Overdrive Loans"
-od_mycontent_help = 'FPer obtenir informació sobre i descarregar els títols, vegeu <a href="%%url%%">Overdrive Help</a>.'
+od_loans = "OverDrive Loans"
+od_mycontent_help = 'FPer obtenir informació sobre i descarregar els títols, vegeu <a href="%%url%%">OverDrive Help</a>.'
 od_none_found = "No s'ha trobat cap títol."
 od_return_failure = "Aquest títol no es pot tornar."
 od_return_success = "Aquest títol ha estat retornat."
