--- a/languages/cs.ini
+++ b/languages/cs.ini
@@ -903,20 +903,20 @@ od_avail_avail = "Dostupnost:"
 od_avail_holds = "Rezervace:"
 od_avail_total = "Počet kopií:"
 od_but_cancel_hold = "Zrušit rezervaci"
-od_but_checkout = "Vypůjčit v systému Overdrive"
+od_but_checkout = "Vypůjčit v systému OverDrive"
 od_but_checkout_s = "Vypůjčit"
 od_but_gettitle = "Stáhnout"
 od_but_gettitle_s = "Stáhnout"
-od_but_hold = "Rezervovat v systému Overdrive"
+od_but_hold = "Rezervovat v systému OverDrive"
 od_but_hold_s = "Rezervovat"
 od_but_return = "Vrátit výpůjčku"
 od_cancel_hold = "Zrušit rezervaci"
-od_checkout = "Výpůjčka v systému Overdrive"
-od_code_connection_failed = "Připojení k systému Overdrive selhalo. Pokud problém přetrvává, kontaktujte knihovnu."
+od_checkout = "Výpůjčka v systému OverDrive"
+od_code_connection_failed = "Připojení k systému OverDrive selhalo. Pokud problém přetrvává, kontaktujte knihovnu."
 od_code_contentnotavail = "Tento obsah není dostupný ve Vaší oblasti."
 od_code_login_for_avail = "Pro zjištění dostupnosti je třeba se přihlásit"
 od_code_resource_not_found = "Titul nebyl nalezen"
-od_content = "Overdrive"
+od_content = "OverDrive"
 od_dl_formats = "Podporované formáty pro stažení"
 od_docheckout_failure = "Tento titul nelze vypůjčit."
 od_docheckout_success = "Titul byl vypůjčen. Výpůjčka vyprší dne %%expireDate%%"
@@ -929,11 +929,11 @@ od_ebook-overdrive = "E-kniha ve formátu OverDrive Read"
 od_ebook-pdf-adobe = "E-kniha ve formátu Adobe PDF"
 od_ebook-pdf-open = "E-kniha ve formátu Open PDF"
 od_expires_on = "Výpůjčka vyprší dne %%due_date%%."
-od_get_title = "Stáhnout ze systému Overdrive"
+od_get_title = "Stáhnout ze systému OverDrive"
 od_gettitle_failure = "Tento titul není možné stáhnout."
-od_help_linktext = "Nápověda pro systém Overdrive"
-od_history = "Historie v systému Overdrive"
-od_hold = "Rezervace v systému Overdrive"
+od_help_linktext = "Nápověda pro systém OverDrive"
+od_history = "Historie v systému OverDrive"
+od_hold = "Rezervace v systému OverDrive"
 od_hold_cancel_failure = "Rezervaci se nepodařilo zrušit."
 od_hold_cancel_success = "Rezervace byla zrušena."
 od_hold_email = "E-mailová adresa pro zaslání upozornění při dostupnosti rezervace: %%holdEmailAddress%%."
@@ -942,11 +942,11 @@ od_hold_place_failure = "Rezervaci se nepodařilo vytvořit."
 od_hold_place_success = "Rezervace byla vytvořena. Vaše pořadí je %%holdListPosition%%."
 od_hold_placed_on = "Rezervace byla vytvořena dne %%holdPlacedDate%%."
 od_hold_queue = "Vaše pořadí ve frontě rezervací je %%holdPosition%% z %%numberOfHolds%%."
-od_holds = "Rezervace v systému Overdrive"
+od_holds = "Rezervace v systému OverDrive"
 od_info_unavail = "Tato informace není právě dostupná."
 od_is_checkedout = "Tento titul již máte vypůjčený do %%due_date%%."
 od_is_on_hold = "Tento titul již máte rezervovaný."
-od_loans = "Výpůjčky v systému Overdrive"
+od_loans = "Výpůjčky v systému OverDrive"
 od_mycontent_help = 'Více informací o stahování těchto titulů si naleznete v <a href="%%url%%">nápovědě systému OverDrive</a>.'
 od_none_found = "Nebyly nalezeny žádné tituly."
 od_return_failure = "Výpůjčku se nepodařilo vrátit."
