--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1000,7 +1000,7 @@ od_mycontent_help = 'For information about and help with downloading these title
 od_none_found = "No titles found."
 od_people = "People"
 od_person = "Person"
-od_resource_page = "Overdrive Resource Page"
+od_resource_page = "OverDrive Resource Page"
 od_return_confirm = "Are you sure you want to return this title?"
 od_return_failure = "This title could not be returned."
 od_return_success = "This title has been returned."
