--- a/languages/es.ini
+++ b/languages/es.ini
@@ -896,7 +896,7 @@ number_decimal_point = "."
 number_thousands_separator = ","
 OAI Server = "Servidor OAI"
 Occupation = "Ocupación"
-od_account_noaccess = "Esta tarjeta de biblioteca no tiene acceso al contenido en Overdrive"
+od_account_noaccess = "Esta tarjeta de biblioteca no tiene acceso al contenido en OverDrive"
 od_account_problem = "Hay un problema con su cuenta. %%message%%"
 od_audiobook-mp3 = "MP3 audiolibro"
 od_audiobook-overdrive = "Escuchar audiolibro OverDrive"
@@ -904,20 +904,20 @@ od_avail_avail = "Disponible"
 od_avail_holds = "Apartados"
 od_avail_total = "Total de copias"
 od_but_cancel_hold = "Cancelar este apartado"
-od_but_checkout = "Checkout Through Overdrive"
+od_but_checkout = "Checkout Through OverDrive"
 od_but_checkout_s = "Préstamos"
 od_but_gettitle = "descargar este contenido"
 od_but_gettitle_s = "Descargas"
-od_but_hold = "Coloque una resrva a través de Overdrive"
+od_but_hold = "Coloque una resrva a través de OverDrive"
 od_but_hold_s = "Poner una resrva"
 od_but_return = "Devolver este título"
-od_cancel_hold = "Cancelar reserva de Overdrive"
+od_cancel_hold = "Cancelar reserva de OverDrive"
 od_checkout = "Préstanmo de OverDrive"
-od_code_connection_failed = "Falló conexión con Overdrive. Si el problema persiste, comuníquese con su biblioteca."
+od_code_connection_failed = "Falló conexión con OverDrive. Si el problema persiste, comuníquese con su biblioteca."
 od_code_contentnotavail = "Este contenido no está disponible en su área."
 od_code_login_for_avail = "Login para disponibilidad"
 od_code_resource_not_found = "Título no encontrado"
-od_content = "Contenido de Overdrive"
+od_content = "Contenido de OverDrive"
 od_dl_formats = "Formatos de descarga soportados"
 od_docheckout_failure = "Este título no pudo ser prestado."
 od_docheckout_success = "Este título te ha sido prestado. Vence el %%expireDate%%"
@@ -930,11 +930,11 @@ od_ebook-overdrive = "OverDrive Read eBook"
 od_ebook-pdf-adobe = "Adobe PDF eBook"
 od_ebook-pdf-open = "Open PDF eBook"
 od_expires_on = "Este título expira en %%due_date%%."
-od_get_title = "Descargas Overdrive"
+od_get_title = "Descargas OverDrive"
 od_gettitle_failure = "Este título no se pudo descargar."
-od_help_linktext = "Ayuda Overdrive"
-od_history = "Historia Overdrive"
-od_hold = "Apartado Overdrive"
+od_help_linktext = "Ayuda OverDrive"
+od_history = "Historia OverDrive"
+od_hold = "Apartado OverDrive"
 od_hold_cancel_failure = "Falló la solicitud de cancelación de reserva."
 od_hold_cancel_success = "La resrva se ha cancelado exitosamente."
 od_hold_email = "Dirección de correo electrónico para la notificación de resrva: %%holdEmailAddress%%."
@@ -943,12 +943,12 @@ od_hold_place_failure = "La solicitud de reserva falló."
 od_hold_place_success = "Este título se ha puesto en reserva. Su posición de reserva es %%holdListPosition%%"
 od_hold_placed_on = "Reserva puesta en %%holdPlacedDate%%."
 od_hold_queue = "Posición %%holdPosition%% de %%numberOfHolds%% en la lista de reservas."
-od_holds = "Reservas Overdrive"
+od_holds = "Reservas OverDrive"
 od_info_unavail = "Esta información no está disponible actualmente."
 od_is_checkedout = "Tiene este título en préstamo. Vence el %%due_date%%."
 od_is_on_hold = "Usted tiene este título en reserva."
-od_loans = "Préstamos Overdrive"
-od_mycontent_help = 'Para obtener información sobre y ayuda con la descarga de estos títulos, consulte <a href="%%url%%"> Overdrive Help </a>.'
+od_loans = "Préstamos OverDrive"
+od_mycontent_help = 'Para obtener información sobre y ayuda con la descarga de estos títulos, consulte <a href="%%url%%"> OverDrive Help </a>.'
 od_none_found = "No se encontraron títulos."
 od_return_failure = "Este título no pudo ser devuelto."
 od_return_success = "Este título ha sido devuelto."
