--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -894,7 +894,7 @@ number_decimal_point = ","
 number_thousands_separator = " "
 OAI Server = "OAI-palvelin"
 Occupation = "Ammatti"
-od_account_noaccess = "Tällä kirjastolla ei ole pääsyä Overdrive-sisältöön"
+od_account_noaccess = "Tällä kirjastolla ei ole pääsyä OverDrive-sisältöön"
 od_account_problem = "Tililläsi on ongelma. %%message%%"
 od_audiobook-mp3 = "MP3-äänikirja"
 od_audiobook-overdrive = "OverDrive Kuuntele äänikirja"
@@ -902,24 +902,24 @@ od_avail_avail = "Saatavilla:"
 od_avail_holds = "Varauksia:"
 od_avail_total = "Kappaleita yhteensä:"
 od_but_cancel_hold = "Peru varaus"
-od_but_checkout = "Lainaa Overdrivesta"
+od_but_checkout = "Lainaa OverDrivesta"
 od_but_checkout_s = "Lainaa"
 od_but_gettitle = "Lataa tämä sisältö"
 od_but_gettitle_s = "Lataa"
-od_but_hold = "Varaa Overdrivesta"
+od_but_hold = "Varaa OverDrivesta"
 od_but_hold_s = "Varaa"
 od_but_return = "Palauta laina"
-od_cancel_hold = "Peruuta Overdrive-varaus"
-od_checkout = "Overdrive-lainaus"
-od_code_connection_failed = "Yhteys Overdriveen epäonnistui. Jos tilanne jatkuu, ota yhteyttä kirjastoon."
+od_cancel_hold = "Peruuta OverDrive-varaus"
+od_checkout = "OverDrive-lainaus"
+od_code_connection_failed = "Yhteys OverDriveen epäonnistui. Jos tilanne jatkuu, ota yhteyttä kirjastoon."
 od_code_contentnotavail = "Tämä sisältö ei ole saatavilla alueellasi."
 od_code_login_for_avail = "Kirjaudu sisään nähdäksesi saatavuuden"
 od_code_resource_not_found = "Nimekettä ei löytynyt"
-od_content = "Overdrive-sisältö"
+od_content = "OverDrive-sisältö"
 od_dl_formats = "Tuetut latausmuodot"
 od_docheckout_failure = "Nimekkeen lainaaminen epäonnistui."
 od_docheckout_success = "Nimeke on lainattu sinulle. Laina erääntyy %%expireDate%%"
-od_early_return = "Palaute Overdrive-laina etuajassa"
+od_early_return = "Palaute OverDrive-laina etuajassa"
 od_ebook-epub-adobe = "Adobe EPUB -sähkökirja"
 od_ebook-epub-open = "Open EPUB -sähkökirja"
 od_ebook-kindle = "Kindle Book"
@@ -928,11 +928,11 @@ od_ebook-overdrive = "OverDrive Read -sähkökirja"
 od_ebook-pdf-adobe = "Adobe PDF -sähkökirja"
 od_ebook-pdf-open = "Open PDF -sähkökirja"
 od_expires_on = "Nimeke vanhenee %%due_date%%."
-od_get_title = "Overdrive-lataus"
+od_get_title = "OverDrive-lataus"
 od_gettitle_failure = "Nimekettä ei voitu ladata."
-od_help_linktext = "Overdrive-opaste"
-od_history = "Overdrive-historia"
-od_hold = "Overdrive-varaus"
+od_help_linktext = "OverDrive-opaste"
+od_history = "OverDrive-historia"
+od_hold = "OverDrive-varaus"
 od_hold_cancel_failure = "Varauksen peruminen epäonnistui."
 od_hold_cancel_success = "Varaus on peruttu."
 od_hold_email = "Sähköpostiosoite varausilmoitukselle: %%holdEmailAddress%%."
@@ -941,12 +941,12 @@ od_hold_place_failure = "Varauspyyntö epäonnistui."
 od_hold_place_success = "Sinulla on varaus tähän teokseen. Paikkasi varausjonossa on %%holdListPosition%%"
 od_hold_placed_on = "Varaus tehty %%holdPlacedDate%%."
 od_hold_queue = "Sijainti varausjonossa on %%holdPosition%% / %%numberOfHolds%%."
-od_holds = "Overdrive-varaukset"
+od_holds = "OverDrive-varaukset"
 od_info_unavail = "Tätä tietoa ei ole juuri nyt saatavissa."
 od_is_checkedout = "Sinulla on tämä teos lainassa.  Sen eräpäivä on %%due_date%%."
 od_is_on_hold = "Sinulla on tämä teos lainassa."
-od_loans = "Overdrive-lainat"
-od_mycontent_help = 'Saadaksesi tietoa näiden teosten lataamisesta ja käyttämisestä, katso <a href="%%url%%">Overdrive Help</a>.'
+od_loans = "OverDrive-lainat"
+od_mycontent_help = 'Saadaksesi tietoa näiden teosten lataamisesta ja käyttämisestä, katso <a href="%%url%%">OverDrive Help</a>.'
 od_none_found = "Ei löytyneitä teoksia."
 od_return_failure = "Teosta ei voitu palauttaa."
 od_return_success = "Teos on palautettu."
