--- a/languages/fr.ini
+++ b/languages/fr.ini
@@ -895,7 +895,7 @@ number_decimal_point = ","
 number_thousands_separator = " "
 OAI Server = "Serveur OAI"
 Occupation = "Activité"
-od_account_noaccess = "Cette carte de bibliothèque n'a pas accès aux contenus d'Overdrive"
+od_account_noaccess = "Cette carte de bibliothèque n'a pas accès aux contenus d'OverDrive"
 od_account_problem = "Il y a un problème avec votre compte. %%message%%"
 od_audiobook-mp3 = "Livre audio MP3"
 od_audiobook-overdrive = "Livre audio OverDrive"
@@ -903,24 +903,24 @@ od_avail_avail = "Disponible :"
 od_avail_holds = "Demandes :"
 od_avail_total = "Nombre total d'exemplaires :"
 od_but_cancel_hold = "Annuler cette demande"
-od_but_checkout = "Emprunter via Overdrive"
+od_but_checkout = "Emprunter via OverDrive"
 od_but_checkout_s = "Emprunter"
 od_but_gettitle = "Télécharger le contenu"
 od_but_gettitle_s = "Télécharger"
-od_but_hold = "Faire une demande via Overdrive"
+od_but_hold = "Faire une demande via OverDrive"
 od_but_hold_s = "Faire une demande"
 od_but_return = "Retourner ce titre"
-od_cancel_hold = "Annuler la demande Overdrive"
-od_checkout = "Emprunt Overdrive"
-od_code_connection_failed = "La connexion à Overdrive a échoué. Si le problème persiste, veuillez contacter votre bibliothèque."
+od_cancel_hold = "Annuler la demande OverDrive"
+od_checkout = "Emprunt OverDrive"
+od_code_connection_failed = "La connexion à OverDrive a échoué. Si le problème persiste, veuillez contacter votre bibliothèque."
 od_code_contentnotavail = "Ce contenu n'est pas disponible dans votre zone géographique."
 od_code_login_for_avail = "Connectez-vous pour connaître la disponibilité"
 od_code_resource_not_found = "Titre introuvable"
-od_content = "Contenus Overdrive"
+od_content = "Contenus OverDrive"
 od_dl_formats = "Formats de téléchargement disponibles"
 od_docheckout_failure = "Ce titre n'a pas pu être emprunté."
 od_docheckout_success = "Ce titre vous a été prêté. Cet emprunt arrive à échéance le %%expireDate%%"
-od_early_return = "Retour précoce Overdrive"
+od_early_return = "Retour précoce OverDrive"
 od_ebook-epub-adobe = "eBook EPUB Adobe"
 od_ebook-epub-open = "eBook EPUB Open"
 od_ebook-kindle = "eBook Kindle"
@@ -929,11 +929,11 @@ od_ebook-overdrive = "eBook OverDrive Read"
 od_ebook-pdf-adobe = "eBook Adobe PDF"
 od_ebook-pdf-open = "eBook Open PDF"
 od_expires_on = "Ce titre arrive à échéance le %%due_date%%."
-od_get_title = "Téléchargement Overdrive"
+od_get_title = "Téléchargement OverDrive"
 od_gettitle_failure = "Ce titre n'a pas pu être téléchargé."
-od_help_linktext = "Aide Overdrive"
-od_history = "Historique Overdrive"
-od_hold = "Demande Overdrive"
+od_help_linktext = "Aide OverDrive"
+od_history = "Historique OverDrive"
+od_hold = "Demande OverDrive"
 od_hold_cancel_failure = "L'annulation de la demande a échoué."
 od_hold_cancel_success = "La demande a été annulée avec succès."
 od_hold_email = "Adresse de courriel pour les notifications concernant les demandes : %%holdEmailAddress%%."
@@ -942,12 +942,12 @@ od_hold_place_failure = "La demande a échoué."
 od_hold_place_success = "Ce titre a fait l'objet d'une ou plusieurs demandes. Le rang de votre demande dans la liste d'attente est : %%holdListPosition%%"
 od_hold_placed_on = "Demande faite le %%holdPlacedDate%%."
 od_hold_queue = "Demande %%holdPosition%% sur %%numberOfHolds%% demandes dans la liste d'attente."
-od_holds = "Demandes Overdrive"
+od_holds = "Demandes OverDrive"
 od_info_unavail = "Cette information n'est pas disponible pour le moment."
 od_is_checkedout = "Vous avez emprunté ce titre. Il doit être retourné pour le %%due_date%%."
 od_is_on_hold = "Vous avez fait une demande pour ce titre."
-od_loans = "Emprunts Overdrive"
-od_mycontent_help = 'Pour trouver des informations et une aide pour le téléchargement de ces titres, veuillez consulter <a href="%%url%%">l\'aide Overdrive</a>.'
+od_loans = "Emprunts OverDrive"
+od_mycontent_help = 'Pour trouver des informations et une aide pour le téléchargement de ces titres, veuillez consulter <a href="%%url%%">l\'aide OverDrive</a>.'
 od_none_found = "Aucun titre n'a été trouvé."
 od_return_failure = "Ce titre ne peut pas être retourné."
 od_return_success = "Ce titre a été retourné."
