--- a/languages/hr.ini
+++ b/languages/hr.ini
@@ -904,15 +904,15 @@ od_avail_avail = "Dostupno:"
 od_avail_holds = "Narudžbe:"
 od_avail_total = "Ukupno primjeraka:"
 od_but_cancel_hold = "Otkaži ovu narudžbu"
-od_but_checkout = "Posudba putem Overdrivea"
+od_but_checkout = "Posudba putem OverDrivea"
 od_but_checkout_s = "Posudba"
 od_but_gettitle = "Preuzmi ovaj sadržaj"
 od_but_gettitle_s = "Preuzmi"
-od_but_hold = "Postavi narudžbu putem Overdrivea"
+od_but_hold = "Postavi narudžbu putem OverDrivea"
 od_but_hold_s = "Postavi narudžbu"
 od_but_return = "Vrati ovaj naslov"
-od_cancel_hold = "Otkaži narudžbu putem Overdrivea"
-od_checkout = "Overdrive posudba"
+od_cancel_hold = "Otkaži narudžbu putem OverDrivea"
+od_checkout = "OverDrive posudba"
 od_code_connection_failed = "Veza na OverDrive nije uspjela. Ako problem ne nestane, kontaktiraj knjižnicu."
 od_code_contentnotavail = "Ovaj sadržaj nije dostupan u tvom području."
 od_code_login_for_avail = "Prijavi se za prikaz dostupnosti"
@@ -934,7 +934,7 @@ od_get_title = "OverDrive preuzimanje"
 od_gettitle_failure = "Nije bilo moguće preuzeti ovaj naslov."
 od_help_linktext = "OverDrive pomoć"
 od_history = "OverDrive povijest"
-od_hold = "Overdrive narudžba"
+od_hold = "OverDrive narudžba"
 od_hold_cancel_failure = "Zahtjev za otkazivanje narudžbe nije uspio."
 od_hold_cancel_success = "Narudžba je uspješno otkazana."
 od_hold_email = "E-mail adresa za obavijesti o narudžbama: %%holdEmailAddress%%."
@@ -943,7 +943,7 @@ od_hold_place_failure = "Zahtjev za narudžbom nije uspio."
 od_hold_place_success = "Ovaj je naslov postavljen kao narudžba. Tvoja narudžba je na %%holdListPosition%%. mjestu"
 od_hold_placed_on = "Narudžba je postavljena %%holdPlacedDate%%."
 od_hold_queue = "Na %%holdPosition%%. mjestu od %%numberOfHolds%% u redoslijedu narudžbi."
-od_holds = "Overdrive narudžbe"
+od_holds = "OverDrive narudžbe"
 od_info_unavail = "Ova informacija trenutačno nije dostupna."
 od_is_checkedout = "Ovaj naslov si posudio/la. Rok posudbe je %%due_date%%."
 od_is_on_hold = "Ovaj naslov si naručio/la."
