--- a/languages/it.ini
+++ b/languages/it.ini
@@ -895,7 +895,7 @@ number_decimal_point = ","
 number_thousands_separator = "."
 OAI Server = "OAI Server"
 Occupation = "Occupazione"
-od_account_noaccess = "La carta della biblioteca non ha accesso ai contenuti in Overdrive"
+od_account_noaccess = "La carta della biblioteca non ha accesso ai contenuti in OverDrive"
 od_account_problem = "C'è un problema con il tuo account. %%message%%"
 od_audiobook-mp3 = "Audiolibro MP3"
 od_audiobook-overdrive = "Audiolibro OverDrive Listen"
@@ -903,24 +903,24 @@ od_avail_avail = "Disponibile:"
 od_avail_holds = "Posseduto:"
 od_avail_total = "Copie totali:"
 od_but_cancel_hold = "Cancella questo posseduto"
-od_but_checkout = "Checkout tramite Overdrive"
+od_but_checkout = "Checkout tramite OverDrive"
 od_but_checkout_s = "Checkout"
 od_but_gettitle = "Scarica questo contenuto"
 od_but_gettitle_s = "Download"
-od_but_hold = "Inserisci posseduto attraverso Overdrive"
+od_but_hold = "Inserisci posseduto attraverso OverDrive"
 od_but_hold_s = "Inserisci posseduto"
 od_but_return = "Restituisci questo titolo"
-od_cancel_hold = "Cancella una copia Overdrive"
-od_checkout = "Checkout Overdrive"
-od_code_connection_failed = "Connessione a Overdrive fallita. Se il problema persiste, contattare la propria biblioteca."
+od_cancel_hold = "Cancella una copia OverDrive"
+od_checkout = "Checkout OverDrive"
+od_code_connection_failed = "Connessione a OverDrive fallita. Se il problema persiste, contattare la propria biblioteca."
 od_code_contentnotavail = "Questo contenuto non è disponibile nella tua area."
 od_code_login_for_avail = "Accedi per controllare la disponibilità"
 od_code_resource_not_found = "Titolo non trovato"
-od_content = "Contenuto Overdrive"
+od_content = "Contenuto OverDrive"
 od_dl_formats = "Formati per il download supportati"
 od_docheckout_failure = "Questo titolo non può essere rilasciato."
 od_docheckout_success = "Questo titolo è stato rilasciato a te. Scade il %%expireDate%%"
-od_early_return = "Restituzione anticipata Overdrive"
+od_early_return = "Restituzione anticipata OverDrive"
 od_ebook-epub-adobe = "Adobe EPUB eBook"
 od_ebook-epub-open = "Open EPUB eBook"
 od_ebook-kindle = "Kindle Book"
@@ -929,11 +929,11 @@ od_ebook-overdrive = "OverDrive Read eBook"
 od_ebook-pdf-adobe = "Adobe PDF eBook"
 od_ebook-pdf-open = "Open PDF eBook"
 od_expires_on = "Questo titolo scade il %%due_date%%."
-od_get_title = "Download Overdrive"
+od_get_title = "Download OverDrive"
 od_gettitle_failure = "Questo titolo non può essere scaricato."
-od_help_linktext = "Aiuto Overdrive"
-od_history = "Cronologia Overdrive"
-od_hold = "Posseduto Overdrive"
+od_help_linktext = "Aiuto OverDrive"
+od_history = "Cronologia OverDrive"
+od_hold = "Posseduto OverDrive"
 od_hold_cancel_failure = "La richiesta di cancellazione del posseduto è fallita."
 od_hold_cancel_success = "Il posseduto è stato cancellato con successo."
 od_hold_email = "Indirizzo email per la notifica del posseduto: %%holdEmailAddress%%."
@@ -942,12 +942,12 @@ od_hold_place_failure = "La riquesta di posseduto è fallita."
 od_hold_place_success = "Questo titolo è stato inserito nel posseduto. La posizione del tuo posseduto è %%holdListPosition%%"
 od_hold_placed_on = "Posseduto inserito il %%holdPlacedDate%%."
 od_hold_queue = "Posizione %%holdPosition%% di %%numberOfHolds%% nella code dei posseduti."
-od_holds = "Posseduto Overdrive"
+od_holds = "Posseduto OverDrive"
 od_info_unavail = "Questa informazione è attualmente non disponibile."
 od_is_checkedout = "Hai questo titolo in rilascio. La restituzione è il %%due_date%%."
 od_is_on_hold = "Hai questo titolo come posseduto."
-od_loans = "Prestiti Overdrive"
-od_mycontent_help = 'Per informazioni e aiuto relativi allo scaricamento di questi titoli, vedi <a href="%%url%%">Aiuto Overdrive</a>.'
+od_loans = "Prestiti OverDrive"
+od_mycontent_help = 'Per informazioni e aiuto relativi allo scaricamento di questi titoli, vedi <a href="%%url%%">Aiuto OverDrive</a>.'
 od_none_found = "Nessun titolo trovato."
 od_return_failure = "Questo titolo non può essere restituito."
 od_return_success = "Questo titolo è stato restituito."
