--- a/languages/ja.ini
+++ b/languages/ja.ini
@@ -896,7 +896,7 @@ number_decimal_point = "."
 number_thousands_separator = ","
 OAI Server = "OAIサーバー"
 Occupation = "職業"
-od_account_noaccess = "この図書カードではOverdriveを利用することができません。"
+od_account_noaccess = "この図書カードではOverDriveを利用することができません。"
 od_account_problem = "アカウントに次の問題がありました: %%message%%"
 od_audiobook-mp3 = "MP3 オーディオブック"
 od_audiobook-overdrive = "OverDrive Listen オーディオブック"
@@ -904,24 +904,24 @@ od_avail_avail = "貸出可能数:"
 od_avail_holds = "予約数:"
 od_avail_total = "所蔵総数:"
 od_but_cancel_hold = "この予約を取り消す"
-od_but_checkout = "Overdriveから貸し出す"
+od_but_checkout = "OverDriveから貸し出す"
 od_but_checkout_s = "貸出"
 od_but_gettitle = "このコンテンツをダウンロード"
 od_but_gettitle_s = "ダウンロード"
-od_but_hold = "Overdriveで予約する"
+od_but_hold = "OverDriveで予約する"
 od_but_hold_s = "予約"
 od_but_return = "このタイトルを返却する"
-od_cancel_hold = "Overdriveでの予約を取り消す"
-od_checkout = "Overdrive 貸出手続き"
-od_code_connection_failed = "Overdriveへの接続に失敗しました。再現するようでしたら図書館にご相談ください。"
+od_cancel_hold = "OverDriveでの予約を取り消す"
+od_checkout = "OverDrive 貸出手続き"
+od_code_connection_failed = "OverDriveへの接続に失敗しました。再現するようでしたら図書館にご相談ください。"
 od_code_contentnotavail = "このコンテンツは利用できません。"
 od_code_login_for_avail = "利用にはログインが必要です"
 od_code_resource_not_found = "該当するタイトルはありませんでした"
-od_content = "Overdrive コンテンツ"
+od_content = "OverDrive コンテンツ"
 od_dl_formats = "利用可能なダウンロードフォーマット"
 od_docheckout_failure = "このタイトルは貸出できませんでした。"
 od_docheckout_success = "このタイトルをあなたに貸し出しました。利用期限は % %expireDate%% です。"
-od_early_return = "Overdrive 早期返却"
+od_early_return = "OverDrive 早期返却"
 od_ebook-epub-adobe = "Adobe EPUB eBook"
 od_ebook-epub-open = "Open EPUB eBook"
 od_ebook-kindle = "Kindle Book"
@@ -930,11 +930,11 @@ od_ebook-overdrive = "OverDrive Read eBook"
 od_ebook-pdf-adobe = "Adobe PDF eBook"
 od_ebook-pdf-open = "Open PDF eBook"
 od_expires_on = "このタイトルの利用期限は %%due_date%% です。"
-od_get_title = "Overdrive ダウンロード"
+od_get_title = "OverDrive ダウンロード"
 od_gettitle_failure = "このタイトルはダウンロードできませんでした。"
-od_help_linktext = "Overdrive ヘルプ"
-od_history = "Overdrive 履歴"
-od_hold = "Overdrive 予約"
+od_help_linktext = "OverDrive ヘルプ"
+od_history = "OverDrive 履歴"
+od_hold = "OverDrive 予約"
 od_hold_cancel_failure = "予約の取り消しができませんでした。"
 od_hold_cancel_success = "予約を取り消しました。"
 od_hold_email = "予約案内通知のメールアドレス: %%holdEmailAddress%%."
@@ -943,12 +943,12 @@ od_hold_place_failure = "予約できませんでした。"
 od_hold_place_success = "このタイトルは予約済みです。予約順位は %%holdListPosition%% です。"
 od_hold_placed_on = "%%holdPlacedDate%% に予約されました。"
 od_hold_queue = "予約者数 %%numberOfHolds% 人のうち、%%holdPosition%% 番目です。"
-od_holds = "Overdrive 予約"
+od_holds = "OverDrive 予約"
 od_info_unavail = "この情報は現在利用できません。"
 od_is_checkedout = "このタイトルはあなたに貸出中です。利用期限は %%due_date%% です。"
 od_is_on_hold = "このタイトルはすでに予約済みです。"
-od_loans = "Overdrive 貸出"
-od_mycontent_help = 'このタイトルのダウンロードに関する情報は<a href="%%url%%">Overdrive ヘルプ</a>をご覧ください。'
+od_loans = "OverDrive 貸出"
+od_mycontent_help = 'このタイトルのダウンロードに関する情報は<a href="%%url%%">OverDrive ヘルプ</a>をご覧ください。'
 od_none_found = "該当するタイトルは見つかりませんでした。"
 od_return_failure = "このタイトルは返却できませんでした。"
 od_return_success = "このタイトルは返却されました。"
