--- a/languages/mn.ini
+++ b/languages/mn.ini
@@ -892,7 +892,7 @@ number_decimal_point = "."
 number_thousands_separator = ","
 OAI Server = "OAI Сервер"
 Occupation = "Мэргэжил"
-od_account_noaccess = "Энэ номын сангийн карт Overdrive дээрх агуулгад хандах эрхгүй байна"
+od_account_noaccess = "Энэ номын сангийн карт OverDrive дээрх агуулгад хандах эрхгүй байна"
 od_account_problem = "Таны бүртгэлд асуудал гарлаа. %%message%%"
 od_audiobook-mp3 = "MP3 аудиобүүк"
 od_audiobook-overdrive = "OverDrive сонсдог аудиобүүк"
@@ -900,24 +900,24 @@ od_avail_avail = "Бэлэн байгаа:"
 od_avail_holds = "Түр хойшлуулсан:"
 od_avail_total = "Нийт хуулбарууд:"
 od_but_cancel_hold = "Энэхүү түр хойшлуулалтыг цуцлах"
-od_but_checkout = "Overdrive-р дамжуулан шалгах"
+od_but_checkout = "OverDrive-р дамжуулан шалгах"
 od_but_checkout_s = "Гарах"
 od_but_gettitle = "Энэ агуулгыг татаж авах"
 od_but_gettitle_s = "Татаж авах"
-od_but_hold = "Overdrive-ээр дамжуулан түр хойшлуулалт үүсгэх"
+od_but_hold = "OverDrive-ээр дамжуулан түр хойшлуулалт үүсгэх"
 od_but_hold_s = "Түр хойшлуулалт үүсгэх"
 od_but_return = "Энэ гарчгийг буцаах"
-od_cancel_hold = "Overdrive-н түр хойшлуулалтыг цуцлах"
-od_checkout = "Overdrive-н шалгалт"
-od_code_connection_failed = "Overdrive-н холболт амжилтгүй болсон. Асуудал хэвээр үргэлжилбэл номын сантайгаа холбоо барина уу."
+od_cancel_hold = "OverDrive-н түр хойшлуулалтыг цуцлах"
+od_checkout = "OverDrive-н шалгалт"
+od_code_connection_failed = "OverDrive-н холболт амжилтгүй болсон. Асуудал хэвээр үргэлжилбэл номын сантайгаа холбоо барина уу."
 od_code_contentnotavail = "Энэ контент танай бүс нутагт ашиглах боломжгүй байна."
 od_code_login_for_avail = "Бэлэн байдлыг шалгаж нэвтрэх"
 od_code_resource_not_found = "Гарчиг олдсонгүй"
-od_content = "Overdrive-н агуулга"
+od_content = "OverDrive-н агуулга"
 od_dl_formats = "Татаж авах форматыг дэмждэг"
 od_docheckout_failure = "Энэ гарчгийг шалгаж чадсангүй."
 od_docheckout_success = 'Энэ гарчгийг танд зориулж шалгасан болно. Үүний хугацаа %%expireDate%%"-д дуусах болно.'
-od_early_return = "Overdrive эрт буцалт"
+od_early_return = "OverDrive эрт буцалт"
 od_ebook-epub-adobe = 'Adobe EPUB цахим ном"хуг'
 od_ebook-epub-open = "EPUB цахим номыг нээх"
 od_ebook-kindle = "Kindle ном"
@@ -926,11 +926,11 @@ od_ebook-overdrive = "OverDrive-н унших цахим ном"
 od_ebook-pdf-adobe = "Adobe PDF цахим ном"
 od_ebook-pdf-open = "PDF цахим ном нээх"
 od_expires_on = "Энэхүү гарчиг %%due_date%%-д хугацаа дуусна."
-od_get_title = "Overdrive-н татан авалт"
+od_get_title = "OverDrive-н татан авалт"
 od_gettitle_failure = "Энэ гарчгийг татаж авах боломжгүй байна."
-od_help_linktext = "Overdrive-н тусламж"
-od_history = "Overdrive-н түүх"
-od_hold = "Overdrive-н түр хойшлуулалт"
+od_help_linktext = "OverDrive-н тусламж"
+od_history = "OverDrive-н түүх"
+od_hold = "OverDrive-н түр хойшлуулалт"
 od_hold_cancel_failure = "Түр хойшлуулалтыг цуцлах хүсэлт амжилтгүй боллоо. "
 od_hold_cancel_success = "Түр хойшлуулалтыг амжилттай цуцлав."
 od_hold_email = "Түр хойшлуулалтын мэдэгдэлд зориулсан цахим шуудангийн хаяг: %%holdEmailAddress%%."
@@ -939,12 +939,12 @@ od_hold_place_failure = "Түр хойшлуулах хүсэлт амжилтг
 od_hold_place_success = "Энэ гарчгийг түр хойшлуулалт дээр тавьсан. Таны түр хойшлуулалтын байр суурь %%holdListPosition%%"
 od_hold_placed_on = "Түр хойшлуулалт %%holdPlacedDate%% дээр байна."
 od_hold_queue = "Түр хойшлуулалтын цуваан дээрх %%numberOfHolds%%-н %%holdPosition%% байрлал."
-od_holds = "Overdrive-н түр хойшлуулалт"
+od_holds = "OverDrive-н түр хойшлуулалт"
 od_info_unavail = "Энэ мэдээллийг одоогоор ашиглах боломжгүй байна."
 od_is_checkedout = "Та энэ гарчгийг шалгасан болно. Үүний хугацаа %%due_date%%-д дуусна."
 od_is_on_hold = "Та энэ гарчгийг түр хойшлуулсан байна."
-od_loans = "Overdrive-н түрээсүүд"
-od_mycontent_help = 'Эдгээр гарчгийн талаар мэдээлэл авах, татаж авахад туслахын тулд, <a href="%%url%%">Overdrive Help</a>-г үзнэ үү.'
+od_loans = "OverDrive-н түрээсүүд"
+od_mycontent_help = 'Эдгээр гарчгийн талаар мэдээлэл авах, татаж авахад туслахын тулд, <a href="%%url%%">OverDrive Help</a>-г үзнэ үү.'
 od_none_found = "Гарчиг олдсонгүй."
 od_return_failure = "Энэ гарчгийг буцаах боломжгүй байна."
 od_return_success = "Энэ гарчгийг буцаасан."
