--- a/languages/pt-br.ini
+++ b/languages/pt-br.ini
@@ -895,7 +895,7 @@ number_decimal_point = "."
 number_thousands_separator = ","
 OAI Server = "Servidor OAI"
 Occupation = "Ocupação"
-od_account_noaccess = "Este cartão de biblioteca não tem acesso ao conteúdo no Overdrive"
+od_account_noaccess = "Este cartão de biblioteca não tem acesso ao conteúdo no OverDrive"
 od_account_problem = "Há um problema com a sua conta. %%message%%"
 od_audiobook-mp3 = "Áudiolivro MP3"
 od_audiobook-overdrive = "Ouvir áudiolivro OverDrive"
@@ -903,24 +903,24 @@ od_avail_avail = "Disponível:"
 od_avail_holds = "Reservas:"
 od_avail_total = "Total de cópias:"
 od_but_cancel_hold = "Cancelar esta reserva"
-od_but_checkout = "Empréstimo através de Overdrive"
+od_but_checkout = "Empréstimo através de OverDrive"
 od_but_checkout_s = "Empréstimo"
 od_but_gettitle = "Baixe este conteúdo"
 od_but_gettitle_s = "Baixar"
-od_but_hold = "Faça uma reserva atráves do Overdrive"
+od_but_hold = "Faça uma reserva atráves do OverDrive"
 od_but_hold_s = "Reservas"
 od_but_return = "Devolva este título"
-od_cancel_hold = "Cancelar reserva de Overdrive"
-od_checkout = "Empréstimo Overdrive"
-od_code_connection_failed = "Conexão com o Overdrive falhou. Se o problema persistir, por favor entre em contato com sua biblioteca."
+od_cancel_hold = "Cancelar reserva de OverDrive"
+od_checkout = "Empréstimo OverDrive"
+od_code_connection_failed = "Conexão com o OverDrive falhou. Se o problema persistir, por favor entre em contato com sua biblioteca."
 od_code_contentnotavail = "Este conteúdo não está disponível em sua área."
 od_code_login_for_avail = "Login para disponíbilidade"
 od_code_resource_not_found = "Título não disponível"
-od_content = "Conteúdo Overdrive"
+od_content = "Conteúdo OverDrive"
 od_dl_formats = "Formatos de Download Suportados"
 od_docheckout_failure = "Este título não pôde ser emprestado."
 od_docheckout_success = "Este título foi emprestado para você. Expira em %%expireDate%%"
-od_early_return = "Devolução antecipada Overdrive"
+od_early_return = "Devolução antecipada OverDrive"
 od_ebook-epub-adobe = "Adobe EPUB eBook"
 od_ebook-epub-open = "Open EPUB eBook"
 od_ebook-kindle = "Kindle Book"
@@ -929,11 +929,11 @@ od_ebook-overdrive = "Leia eBook OverDrive"
 od_ebook-pdf-adobe = "EBook Adobe PDF"
 od_ebook-pdf-open = "Abra o eBook em PDF"
 od_expires_on = "Este título expira em %%due_date%%."
-od_get_title = "Baixar Overdrive"
+od_get_title = "Baixar OverDrive"
 od_gettitle_failure = "Este título não pôde ser baixado."
-od_help_linktext = "Ajuda Overdrive"
-od_history = "Histórico Overdrive"
-od_hold = "Reserva Overdrive"
+od_help_linktext = "Ajuda OverDrive"
+od_history = "Histórico OverDrive"
+od_hold = "Reserva OverDrive"
 od_hold_cancel_failure = "A solicitação de cancelamento de reserva falhou."
 od_hold_cancel_success = "A reserva foi cancelada com sucesso."
 od_hold_email = "Endereço de e-mail para notificação de reserva: %%holdEmailAddress%%."
@@ -942,12 +942,12 @@ od_hold_place_failure = "A solicitação de reserva falhou."
 od_hold_place_success = "Este título foi colocado em reserva. Sua posição de reserva é %%holdListPosition%%"
 od_hold_placed_on = "Reserva colocada em %%holdPlacedDate%%."
 od_hold_queue = "Posição %%holdPosition%% de %%numberOfHolds%% na fila de reservas."
-od_holds = "Reservas Overdrive"
+od_holds = "Reservas OverDrive"
 od_info_unavail = "Esta informação está atualmente indisponível."
 od_is_checkedout = "Você tem esse título emprestado. Fim do empréstimo em %%due_date%%."
 od_is_on_hold = "Você tem esse título em reserva."
-od_loans = "Empréstimos Overdrive"
-od_mycontent_help = 'Para obter informações de como realizar o download desses títulos, consulte <a href="%%url%%">Ajuda Overdrive</a>.'
+od_loans = "Empréstimos OverDrive"
+od_mycontent_help = 'Para obter informações de como realizar o download desses títulos, consulte <a href="%%url%%">Ajuda OverDrive</a>.'
 od_none_found = "Nenhum título econcontrado."
 od_return_failure = "Este título não pôde ser devolvido."
 od_return_success = "Este título foi devolvido."
