--- a/languages/ru.ini
+++ b/languages/ru.ini
@@ -912,7 +912,7 @@ number_decimal_point = "."
 number_thousands_separator = ","
 OAI Server = "OAI-сервер"
 Occupation = "Профессия"
-od_account_noaccess = "У этой библиотечной карты нет доступа к контенту в Overdrive"
+od_account_noaccess = "У этой библиотечной карты нет доступа к контенту в OverDrive"
 od_account_problem = "Возникла проблема с вашей учетной записью. %%message%%"
 od_audiobook-mp3 = "Аудиокнига в формате MP3"
 od_audiobook-overdrive = "OverDrive Прослушать аудиокнигу"
@@ -920,7 +920,7 @@ od_avail_avail = "Доступно:"
 od_avail_holds = "Удерживает:"
 od_avail_total = "Всего копий:"
 od_but_cancel_hold = "Отменить это удержание"
-od_but_checkout = "Оформить заказ через Overdrive"
+od_but_checkout = "Оформить заказ через OverDrive"
 od_but_checkout_s = "Оформить заказ"
 od_but_gettitle = "Скачать этот контент"
 od_but_gettitle_s = "Скачать"
@@ -929,7 +929,7 @@ od_but_hold_s = "Удерживать место"
 od_but_return = "Вернуть это название"
 od_cancel_hold = "Отменить удержание ускорения"
 od_checkout = "Проверка с ускорением"
-od_code_connection_failed = "Не удалось подключиться к Overdrive. Если проблема не устранена, обратитесь в свою библиотеку."
+od_code_connection_failed = "Не удалось подключиться к OverDrive. Если проблема не устранена, обратитесь в свою библиотеку."
 od_code_contentnotavail = "Это содержимое недоступно в вашем районе."
 od_code_login_for_avail = "Вход в систему"
 od_code_resource_not_found = "Название не обнаружено"
@@ -964,7 +964,7 @@ od_info_unavail = "Эта информация в настоящее время 
 od_is_checkedout = "Вы проверили это название. Срок сдачи %%due_date%%."
 od_is_on_hold = "Это название отложено."
 od_loans = "Кредиты с овердрайвом"
-od_mycontent_help = 'Для получения информации и помощи по загрузке этих игр см. <a href="%%url%%">Справку Overdrive</a>.'
+od_mycontent_help = 'Для получения информации и помощи по загрузке этих игр см. <a href="%%url%%">Справку OverDrive</a>.'
 od_none_found = "аголовки не найдены."
 od_return_failure = "Это название не может быть возвращено"
 od_return_success = "Это название возвращено"
