--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -894,7 +894,7 @@ number_decimal_point = ","
 number_thousands_separator = " "
 OAI Server = "OAI Servern"
 Occupation = "Yrke"
-od_account_noaccess = "Detta bibliotekskort har inte tillgång till materialet i Overdrive"
+od_account_noaccess = "Detta bibliotekskort har inte tillgång till materialet i OverDrive"
 od_account_problem = "Det finns ett problem med ditt konto. %%message%%"
 od_audiobook-mp3 = "MP3 ljudbok"
 od_audiobook-overdrive = "OverDrive Listen ljudbok"
@@ -902,24 +902,24 @@ od_avail_avail = "Tillgänglig:"
 od_avail_holds = "Reserveringar:"
 od_avail_total = "Antal exemplar:"
 od_but_cancel_hold = "Annullera denna reservering"
-od_but_checkout = "Utlåna via Overdrive"
+od_but_checkout = "Utlåna via OverDrive"
 od_but_checkout_s = "Utlåna"
 od_but_gettitle = "Ladda ner materialet"
 od_but_gettitle_s = "Ladda net"
-od_but_hold = "Reservera via Overdrive"
+od_but_hold = "Reservera via OverDrive"
 od_but_hold_s = "Reservera"
 od_but_return = "Returnera denna titel"
-od_cancel_hold = "Annullera reservering via Overdrive"
-od_checkout = "Overdrive-utlåning"
-od_code_connection_failed = "Anslutning till Overdrive misslyckades. Kontakta biblioteket om problemet kvarstår."
-od_code_contentnotavail = "Detta material är inte tillgängligt via Overdrive."
+od_cancel_hold = "Annullera reservering via OverDrive"
+od_checkout = "OverDrive-utlåning"
+od_code_connection_failed = "Anslutning till OverDrive misslyckades. Kontakta biblioteket om problemet kvarstår."
+od_code_contentnotavail = "Detta material är inte tillgängligt via OverDrive."
 od_code_login_for_avail = "Logga in för att kolla tillgängligheten"
 od_code_resource_not_found = "Titeln hittades inte"
-od_content = "Overdrive-material"
+od_content = "OverDrive-material"
 od_dl_formats = "Stödda nedladdningsformat"
 od_docheckout_failure = "Titeln kunde inte utlånas."
 od_docheckout_success = "Denna titel har utlånats för dig. Förfallodagen är %%expireDate%%"
-od_early_return = "Overdrive tidig returnering"
+od_early_return = "OverDrive tidig returnering"
 od_ebook-epub-adobe = "Adobe EPUB e-bok"
 od_ebook-epub-open = "Open EPUB e-bok"
 od_ebook-kindle = "Kindle Book"
@@ -928,11 +928,11 @@ od_ebook-overdrive = "OverDrive Read e-bok"
 od_ebook-pdf-adobe = "Adobe PDF e-bok"
 od_ebook-pdf-open = "Open PDF e-bok"
 od_expires_on = "Denna titel löper ut %%due_date%%."
-od_get_title = "Overdrive-nerladdning"
+od_get_title = "OverDrive-nerladdning"
 od_gettitle_failure = "Titeln kunde inte laddas ner."
-od_help_linktext = "Hjälp med Overdrive"
-od_history = "Overdrive-historiken"
-od_hold = "Overdrive-reservering"
+od_help_linktext = "Hjälp med OverDrive"
+od_history = "OverDrive-historiken"
+od_hold = "OverDrive-reservering"
 od_hold_cancel_failure = "Reserveringen kunde inte annulleras."
 od_hold_cancel_success = "Reserveringen har annullerats."
 od_hold_email = "E-postadress för reserveringsmeddelandet: %%holdEmailAddress%%."
@@ -941,12 +941,12 @@ od_hold_place_failure = "Reserveringsbegäran misslyckades."
 od_hold_place_success = "Titeln har reserverats. Din placering i kön är %%holdListPosition%%"
 od_hold_placed_on = "Reserverad %%holdPlacedDate%%."
 od_hold_queue = "Placering %%holdPosition%% av %%numberOfHolds%% i reserveringskön."
-od_holds = "Overdrive-reserveringar"
+od_holds = "OverDrive-reserveringar"
 od_info_unavail = "Ingen data tillgänglig"
 od_is_checkedout = "Du har denna titel utlånad.  Förfallodagen är %%due_date%%."
 od_is_on_hold = "Du har reserverad titeln."
-od_loans = "Overdrive-lån"
-od_mycontent_help = 'För information och hjälp med nedladdning av dessa titel, se <a href="%%url%%">Overdrive Help</a>.'
+od_loans = "OverDrive-lån"
+od_mycontent_help = 'För information och hjälp med nedladdning av dessa titel, se <a href="%%url%%">OverDrive Help</a>.'
 od_none_found = "Inga resultat."
 od_return_failure = "Titeln kunde inte returneras."
 od_return_success = "Titeln har returnerats."
