--- a/languages/tr.ini
+++ b/languages/tr.ini
@@ -949,7 +949,7 @@ number_decimal_point = "."
 number_thousands_separator = ","
 OAI Server = "OAI Sunucu"
 Occupation = "Meslek"
-od_account_noaccess = "Bu kütüphane kartının Overdrive'daki içeriğe erişimi yoktur"
+od_account_noaccess = "Bu kütüphane kartının OverDrive'daki içeriğe erişimi yoktur"
 od_account_problem = "Hesabınızla ilgili bir sorun var. %%message%%"
 od_audiobook-mp3 = "MP3 sesli kitap"
 od_audiobook-overdrive = "OverDrive sesli kitabı dinle"
@@ -957,24 +957,24 @@ od_avail_avail = "Erişilebilir:"
 od_avail_holds = "Tutar:"
 od_avail_total = "Toplam Kopya:"
 od_but_cancel_hold = "Bu ayırmayı iptal et"
-od_but_checkout = "Overdrive Üzerinden Ödünç"
+od_but_checkout = "OverDrive Üzerinden Ödünç"
 od_but_checkout_s = "Ödünç Al"
 od_but_gettitle = "Bu içeriği indir"
 od_but_gettitle_s = "İndir"
-od_but_hold = "Overdrive Üzerinden Bir ayırma koyun"
+od_but_hold = "OverDrive Üzerinden Bir ayırma koyun"
 od_but_hold_s = "Ayırma Yeri"
 od_but_return = "Bu başlığı iade et"
-od_cancel_hold = "Overdrive Ayırmayı iptal et"
-od_checkout = "Overdrive Ödünç Alma"
-od_code_connection_failed = "Overdrive'a bağlantı başarısız oldu. Sorun devam ederse, lütfen kütüphanenize başvurun."
+od_cancel_hold = "OverDrive Ayırmayı iptal et"
+od_checkout = "OverDrive Ödünç Alma"
+od_code_connection_failed = "OverDrive'a bağlantı başarısız oldu. Sorun devam ederse, lütfen kütüphanenize başvurun."
 od_code_contentnotavail = "Bu içerik bölgenizde mevcut değil."
 od_code_login_for_avail = "Kullanılabilirlik için giriş yapın"
 od_code_resource_not_found = "Başlık bulunamadı"
-od_content = "Overdrive İçeriği"
+od_content = "OverDrive İçeriği"
 od_dl_formats = "Desteklenen İndirme Formatları"
 od_docheckout_failure = "Bu başlık ödünç alınamadı."
 od_docheckout_success = 'Bu başlık starafınızdan ödünç alındı. %%expireDate%%" Tarihinde sona eriyor'
-od_early_return = "Overdrive Erken İade"
+od_early_return = "OverDrive Erken İade"
 od_ebook-epub-adobe = "Adobe EPUB eKitap"
 od_ebook-epub-open = "EPUB eKitabı Aç"
 od_ebook-kindle = "Kindle Kitabı"
@@ -983,11 +983,11 @@ od_ebook-overdrive = "OverDrive eKitap Oku"
 od_ebook-pdf-adobe = "Adobe PDF eKitap"
 od_ebook-pdf-open = "PDF eKitap Aç"
 od_expires_on = "%%due_date%% tarihinde bu başlığın süresi doluyor."
-od_get_title = "Overdrive İndirme"
+od_get_title = "OverDrive İndirme"
 od_gettitle_failure = "Bu başlık indirilemedi."
-od_help_linktext = "Overdrive Yardım"
-od_history = "Overdrive Tarihçe"
-od_hold = "Overdrive Ayırmalar"
+od_help_linktext = "OverDrive Yardım"
+od_history = "OverDrive Tarihçe"
+od_hold = "OverDrive Ayırmalar"
 od_hold_cancel_failure = "Ayırtma iptal isteği başarısız oldu."
 od_hold_cancel_success = "Ayırtma başarıyla iptal edildi."
 od_hold_email = "Ayırtma bildirimi için e-posta adresi: %%holdEmailAddress%%."
@@ -996,12 +996,12 @@ od_hold_place_failure = "Ayırtme isteği başarısız oldu."
 od_hold_place_success = "Bu başlık daha önceden ayırtıldı. Ayırma durumunuz %%holdListPosition%%"
 od_hold_placed_on = "%%holdPlacedDate%% tarihine kadar ayırt."
 od_hold_queue = "%%holdPosition%% ayırtma durumunda %%numberOfHolds%%. sıradasınız."
-od_holds = "Overdrive Ayırtmalar"
+od_holds = "OverDrive Ayırtmalar"
 od_info_unavail = "Bu bilgi şu anda kullanılamıyor."
 od_is_checkedout = "Bu başlığı ödünç alabilirsiniz. %%due_date%% tarihinde süre bitecek."
 od_is_on_hold = "Bu başlığı ayırttınız"
-od_loans = "Overdrive Ödünç Vermeleri"
-od_mycontent_help = 'Bu başlıkları indirme hakkında bilgi ve yardım için, <a href="%%url%%">Overdrive Yardım</a> bağlantısına tıklayınız.'
+od_loans = "OverDrive Ödünç Vermeleri"
+od_mycontent_help = 'Bu başlıkları indirme hakkında bilgi ve yardım için, <a href="%%url%%">OverDrive Yardım</a> bağlantısına tıklayınız.'
 od_none_found = "Başlık bulunamadı."
 od_return_failure = "Bu başlık iade edilmedi."
 od_return_success = "Bu başlık iade edildi."
