--- a/languages/vi.ini
+++ b/languages/vi.ini
@@ -820,7 +820,7 @@ number_decimal_point = "."
 number_thousands_separator = ","
 OAI Server = "Máy chủ OAI"
 Occupation = "Nghề nghiệp"
-od_account_noaccess = "Thẻ thư viện này không có quyền truy cập vào nội dung trong Overdrive"
+od_account_noaccess = "Thẻ thư viện này không có quyền truy cập vào nội dung trong OverDrive"
 od_account_problem = "Có một vấn đề với tài khoản của bạn. %%message%%"
 od_audiobook-mp3 = "MP3 audiobook"
 od_audiobook-overdrive = "OverDrive Nghe audiobook"
@@ -828,7 +828,7 @@ od_avail_avail = "Có sẵn:"
 od_avail_holds = "Giữ:"
 od_avail_total = "Tổng số bản sao:"
 od_but_cancel_hold = "Hủy bỏ giữ này"
-od_but_checkout = "Thanh toán qua Overdrive"
+od_but_checkout = "Thanh toán qua OverDrive"
 od_but_checkout_s = "Kiểm tra"
 od_but_gettitle = "Tải nội dung này"
 od_but_gettitle_s = "Tải về"
@@ -837,7 +837,7 @@ od_but_hold_s = "Giữ chỗ"
 od_but_return = "Trả lại danh hiệu này"
 od_cancel_hold = "Hủy giữ quá mức"
 od_checkout = "Thanh toán vượt mức"
-od_code_connection_failed = "Kết nối với Overdrive không thành công. Nếu vấn đề vẫn còn, xin vui lòng liên hệ với thư viện của bạn."
+od_code_connection_failed = "Kết nối với OverDrive không thành công. Nếu vấn đề vẫn còn, xin vui lòng liên hệ với thư viện của bạn."
 od_code_contentnotavail = "Nội dung này không có sẵn trong khu vực của bạn."
 od_code_login_for_avail = "Đăng nhập để sẵn sàng"
 od_code_resource_not_found = "Không tìm thấy tiêu đề"
@@ -872,7 +872,7 @@ od_info_unavail = "Thông tin này hiện không có sẵn."
 od_is_checkedout = "Bạn đã kiểm tra tiêu đề này. Đó là do %%due_date%%."
 od_is_on_hold = "Bạn có tiêu đề này bị giữ."
 od_loans = "Mượn quá mức"
-od_mycontent_help = 'Để biết thông tin về và giúp tải xuống các tiêu đề này, xem <a href="%%url%%">Overdrive Help</a>.'
+od_mycontent_help = 'Để biết thông tin về và giúp tải xuống các tiêu đề này, xem <a href="%%url%%">OverDrive Help</a>.'
 od_none_found = "Không tìm thấy tiêu đề."
 od_return_failure = "Tiêu đề này không thể được trả lại."
 od_return_success = "Danh hiệu này đã được trả lại."
