--- a/languages/de.ini
+++ b/languages/de.ini
@@ -912,7 +912,7 @@ number_decimal_point = ","
 number_thousands_separator = "."
 OAI Server = "OAI-Server"
 Occupation = "Beruf"
-od_account_noaccess = "Dieses Bibliothekskonto hat keinen Zugriff auf Inhalte in Overdrive."
+od_account_noaccess = "Dieses Bibliothekskonto hat keinen Zugriff auf Inhalte in OverDrive."
 od_account_problem = "Es gibt ein Problem mit deinem Konto. %%message%%"
 od_audiobook-mp3 = "MP3 Hörbuch"
 od_audiobook-overdrive = "OverDrive Hörbuch"
@@ -920,24 +920,24 @@ od_avail_avail = "Verfügbar:"
 od_avail_holds = "Warteliste:"
 od_avail_total = "Total Exemplare:"
 od_but_cancel_hold = "Diese Vormerkung löschen"
-od_but_checkout = "Ausleihe über Overdrive"
+od_but_checkout = "Ausleihe über OverDrive"
 od_but_checkout_s = "Ausleihe"
 od_but_gettitle = "Diesen Inhalt herunterladen"
 od_but_gettitle_s = "Herunterladen"
-od_but_hold = "Eine Vormerkung in Overdrive aufgeben"
+od_but_hold = "Eine Vormerkung in OverDrive aufgeben"
 od_but_hold_s = "Vormerkung aufgeben"
 od_but_return = "Diesen Titel zurückgeben"
-od_cancel_hold = "Vormerkung für Overdrive löschen"
-od_checkout = "Overdrive Ausleihe"
-od_code_connection_failed = "Die Verbindung zu Overdrive ist fehlgeschlagen. Kontaktieren Sie Ihre Bibliothek, falls das Problem andauert."
+od_cancel_hold = "Vormerkung für OverDrive löschen"
+od_checkout = "OverDrive Ausleihe"
+od_code_connection_failed = "Die Verbindung zu OverDrive ist fehlgeschlagen. Kontaktieren Sie Ihre Bibliothek, falls das Problem andauert."
 od_code_contentnotavail = "Dieser Inhalt ist für Ihre Region nicht freigeschaltet."
 od_code_login_for_avail = "Login für Verfügbarkeit"
 od_code_resource_not_found = "Title nicht gefunden"
-od_content = "Overdrive Inhalte"
+od_content = "OverDrive Inhalte"
 od_dl_formats = "Unterstützte Download-Formate"
 od_docheckout_failure = "Dieser Titel konnte nicht ausgeliehen werden."
 od_docheckout_success = "Dieser Titel wurde für Sie ausgeliehen. Die Ausleihe läuft ab am %%expireDate%%"
-od_early_return = "Overdrive vorzeitige Rückgabe"
+od_early_return = "OverDrive vorzeitige Rückgabe"
 od_ebook-epub-adobe = "Adobe EPUB e-Book"
 od_ebook-epub-open = "EPUB e-Book öffnen"
 od_ebook-kindle = "Kindle e-Book"
@@ -946,11 +946,11 @@ od_ebook-overdrive = "OverDrive Online e-Book"
 od_ebook-pdf-adobe = "Adobe PDF e-Book"
 od_ebook-pdf-open = "PDF e-Book öffnen"
 od_expires_on = "Dieser Titel läuft ab am %%due_date%%."
-od_get_title = "Overdrive Download"
+od_get_title = "OverDrive Download"
 od_gettitle_failure = "Dieser Titel konnte nicht heruntergeladen werden."
-od_help_linktext = "Overdrive Hilfe"
-od_history = "Overdrive bisherige Nutzung"
-od_hold = "Overdrive Vormerkungen"
+od_help_linktext = "OverDrive Hilfe"
+od_history = "OverDrive bisherige Nutzung"
+od_hold = "OverDrive Vormerkungen"
 od_hold_cancel_failure = "Das Löschen der Vormerkung ist fehlgeschlagen."
 od_hold_cancel_success = "Vormerkung erfolgreich gelöscht."
 od_hold_email = "E-Mail-Adresse für Benachrichtigung bei Vormerkungen: %%holdEmailAddress%%."
@@ -959,12 +959,12 @@ od_hold_place_failure = "Vormerkung fehlgeschlagen."
 od_hold_place_success = "Dieser Titel wurde vorgemerkt. Sie befinden sich in der Warteliste an folgender Stelle: %%holdListPosition%%"
 od_hold_placed_on = "Vormerkung aufgegeben am %%holdPlacedDate%%."
 od_hold_queue = "Vormerkung %%holdPosition%% von %%numberOfHolds%% Vormerkungen in der Warteliste."
-od_holds = "Overdrive Vormerkungen"
+od_holds = "OverDrive Vormerkungen"
 od_info_unavail = "Diese Informationen sind derzeit nicht verfügbar."
 od_is_checkedout = "Sie haben diesen Titel ausgeliehen. Er wird fällig am %%due_date%%."
 od_is_on_hold = "Sie haben diesen Titel vorgemerkt."
-od_loans = "Overdrive Ausleihen"
-od_mycontent_help = 'Informationen und Hilfe zum Herunterladen dieser Titel finden Sie unter <a href="%%url%%">Overdrive Help</a>.'
+od_loans = "OverDrive Ausleihen"
+od_mycontent_help = 'Informationen und Hilfe zum Herunterladen dieser Titel finden Sie unter <a href="%%url%%">OverDrive Help</a>.'
 od_none_found = "Keine Titel gefunden."
 od_return_failure = "Dieser Titel konnte nicht ausgebucht werden."
 od_return_success = "Dieser Titel wurde ausgebucht."
