--- a/languages/el.ini
+++ b/languages/el.ini
@@ -893,7 +893,7 @@ number_decimal_point = ","
 number_thousands_separator = "."
 OAI Server = "Εξυπηρετητής OAI"
 Occupation = "Επάγγελμα"
-od_account_noaccess = "Αυτή η κάρτα βιβλιοθήκης δεν έχει πρόσβαση σε περιεχόμενο του Overdrive"
+od_account_noaccess = "Αυτή η κάρτα βιβλιοθήκης δεν έχει πρόσβαση σε περιεχόμενο του OverDrive"
 od_account_problem = "Υπάρχει πρόβλημα με τον λογαριασμό σας. %%message%%"
 od_audiobook-mp3 = "Ηχητικό βιβλίο MP3"
 od_audiobook-overdrive = "Ακρόαση ηχητικού βιβλίου του OverDrive"
@@ -901,24 +901,24 @@ od_avail_avail = "Available:"
 od_avail_holds = "Κρατήσεις:"
 od_avail_total = "Συνολικά αντίτυπα:"
 od_but_cancel_hold = "Ακύρωση κράτησης"
-od_but_checkout = "Δανεισμός μέσω του Overdrive"
+od_but_checkout = "Δανεισμός μέσω του OverDrive"
 od_but_checkout_s = "Δανεισμός"
 od_but_gettitle = "Κατέβασμα αυτού του περιεχομένου"
 od_but_gettitle_s = "Κατέβασμα"
-od_but_hold = "Κράτηση μέσω του Overdrive"
+od_but_hold = "Κράτηση μέσω του OverDrive"
 od_but_hold_s = "Αίτημα κράτησης"
 od_but_return = "Επιστροφή τίτλου"
-od_cancel_hold = "Ακύρωση κράτησης μέσω του Overdrive"
-od_checkout = "Δανεισμός μέσω του Overdrive"
-od_code_connection_failed = "Η σύνδεση με το Overdrive απέτυχε. Εάν το πρόβλημα επιμένει, παρακαλώ επικοινωνήστε με την βιβλιοθήκη σας."
+od_cancel_hold = "Ακύρωση κράτησης μέσω του OverDrive"
+od_checkout = "Δανεισμός μέσω του OverDrive"
+od_code_connection_failed = "Η σύνδεση με το OverDrive απέτυχε. Εάν το πρόβλημα επιμένει, παρακαλώ επικοινωνήστε με την βιβλιοθήκη σας."
 od_code_contentnotavail = "Αυτό το περιεχόμενο δεν είναι διαθέσιμο στην περιοχή σας."
 od_code_login_for_avail = "Συνδεθείτε για να δείτε διαθεσιμότητα"
 od_code_resource_not_found = "Ο τίτλος δεν βρέθηκε"
-od_content = "Περιεχόμενο του Overdrive"
+od_content = "Περιεχόμενο του OverDrive"
 od_dl_formats = "Διαθέσιμοι μορφότυποι για κατέβασμα"
 od_docheckout_failure = "Αυτός ο τίτλος δεν ήταν δυνατό να δανειστεί."
 od_docheckout_success = "Αυτός ο τίτλος δανείστηκε σε εσάς και λήγει στις %%expireDate%%"
-od_early_return = "Πρώιμη επιστροφή μέσω του Overdrive"
+od_early_return = "Πρώιμη επιστροφή μέσω του OverDrive"
 od_ebook-epub-adobe = "Adobe EPUB eBook"
 od_ebook-epub-open = "Open EPUB eBook"
 od_ebook-kindle = "Kindle Book"
@@ -927,11 +927,11 @@ od_ebook-overdrive = "OverDrive Read eBook"
 od_ebook-pdf-adobe = "Adobe PDF eBook"
 od_ebook-pdf-open = "Open PDF eBook"
 od_expires_on = "Αυτός ο τίτλος λήγει στις %%due_date%%."
-od_get_title = "Κατέβασμα μέσω του Overdrive"
+od_get_title = "Κατέβασμα μέσω του OverDrive"
 od_gettitle_failure = "Δεν υπάρχει δυνατότητα κατεβάσματος αυτού του τίτλου."
-od_help_linktext = "Βοήθεια για το Overdrive"
-od_history = "Ιστορικό του Overdrive"
-od_hold = "Κράτηση μέσω του Overdrive"
+od_help_linktext = "Βοήθεια για το OverDrive"
+od_history = "Ιστορικό του OverDrive"
+od_hold = "Κράτηση μέσω του OverDrive"
 od_hold_cancel_failure = "Το αίτημα ακύρωσης της κράτησης απέτυχε."
 od_hold_cancel_success = "Η κράτηση ακυρώθηκε με επιτυχία."
 od_hold_email = "Διεύθυνση email για ειδοποίηση σχετικά με την κράτηση: %%holdEmailAddress%%."
@@ -940,12 +940,12 @@ od_hold_place_failure = "Το αίτημα κράτησης απέτυχε."
 od_hold_place_success = "Αυτός ο τίτλος έχει κρατηθεί. Η θέση κράτησής σας είναι %%holdListPosition%%"
 od_hold_placed_on = "Έγινε κράτηση στις %%holdPlacedDate%%."
 od_hold_queue = "Θέση %%holdPosition%% σε σύνολο %%numberOfHolds%% στην ουρά κρατήσεων."
-od_holds = "Κρατήσεις του Overdrive"
+od_holds = "Κρατήσεις του OverDrive"
 od_info_unavail = "Αυτή η πληροφορία δεν είναι διαθέσιμη."
 od_is_checkedout = "Έχετε δανειστεί αυτόν τον τίτλο. Ημερομηνία επιστροφής %%due_date%%."
 od_is_on_hold = "Έχετε κρατήσει αυτόν τον τίτλο."
-od_loans = "Δανεισμοί του Overdrive"
-od_mycontent_help = 'Για πληροφορίες και βοήθεια σχετικά με το κατέβασμα αυτών των τίτλων, δείτε την <a href="%%url%%">βοήθεια του Overdrive</a>.'
+od_loans = "Δανεισμοί του OverDrive"
+od_mycontent_help = 'Για πληροφορίες και βοήθεια σχετικά με το κατέβασμα αυτών των τίτλων, δείτε την <a href="%%url%%">βοήθεια του OverDrive</a>.'
 od_none_found = "Δεν βρέθηκαν τίτλοι."
 od_return_failure = "Αυτός ο τίτλος δεν μπόρεσε να επιστραφεί."
 od_return_success = "Έγινε επιστροφή αυτού του τίτλου."
