--- a/languages/ga.ini
+++ b/languages/ga.ini
@@ -893,7 +893,7 @@ number_decimal_point = "."
 number_thousands_separator = ","
 OAI Server = "Freastalaí OAI"
 Occupation = "Gairm bheatha"
-od_account_noaccess = "Níl rochtain ag an gcárta leabharlainne seo ar ábhar in Overdrive"
+od_account_noaccess = "Níl rochtain ag an gcárta leabharlainne seo ar ábhar in OverDrive"
 od_account_problem = "Tá fadhb le do chuntas. %%message%%"
 od_audiobook-mp3 = "Closleabhar MP3"
 od_audiobook-overdrive = "Closleabhar OverDrive Listen"
@@ -901,24 +901,24 @@ od_avail_avail = "Ar fáil:"
 od_avail_holds = "Coinneálacha:"
 od_avail_total = "Iomlán na gcóipeanna:"
 od_but_cancel_hold = "Cuir an choinneáil seo ar ceal"
-od_but_checkout = "Seiceáil amach trí Overdrive"
+od_but_checkout = "Seiceáil amach trí OverDrive"
 od_but_checkout_s = "Seiceáil amach"
 od_but_gettitle = "Íoslódáil an t-ábhar seo"
 od_but_gettitle_s = "Íoslódáil"
-od_but_hold = "Cuir coinneáil air trí Overdrive"
+od_but_hold = "Cuir coinneáil air trí OverDrive"
 od_but_hold_s = "Cuir coinneáil air"
 od_but_return = "Tabhair an teideal seo ar ais"
-od_cancel_hold = "Cuir an choinneáil in Overdrive ar ceal"
-od_checkout = "Seiceáil amach Overdrive"
-od_code_connection_failed = "Níorbh fhéidir nascadh le Overdrive. Má leanann an fhadhb, déan teagmháil le do leabharlann."
+od_cancel_hold = "Cuir an choinneáil in OverDrive ar ceal"
+od_checkout = "Seiceáil amach OverDrive"
+od_code_connection_failed = "Níorbh fhéidir nascadh le OverDrive. Má leanann an fhadhb, déan teagmháil le do leabharlann."
 od_code_contentnotavail = "Níl an t-ábhar seo ar fáil i do cheantar."
 od_code_login_for_avail = "Logáil isteach lena fháil amach an bhfuil sé ar fáil"
 od_code_resource_not_found = "Níor aimsíodh an teideal"
-od_content = "Ábhar Overdrive"
+od_content = "Ábhar OverDrive"
 od_dl_formats = "Formáidí íoslódála is féidir a úsáid"
 od_docheckout_failure = "Níorbh fhéidir an teideal seo a sheiceáil amach."
 od_docheckout_success = "Tá an teideal seo seiceáilte amach agat. Tá sé le dul in éag ar an %%expireDate%%"
-od_early_return = "Tabhairt ar ais luath Overdrive"
+od_early_return = "Tabhairt ar ais luath OverDrive"
 od_ebook-epub-adobe = "Ríomhleabhar ePub Adobe"
 od_ebook-epub-open = "Ríomhleabhar ePub Oscailte"
 od_ebook-kindle = "Leabhar Kindle"
@@ -927,11 +927,11 @@ od_ebook-overdrive = "Ríomhleabhar OverDrive Read"
 od_ebook-pdf-adobe = "Ríomhleabhar PDF Adobe"
 od_ebook-pdf-open = "Ríomhleabhar PDF Oscailte"
 od_expires_on = "Tá an teideal le dul in éag ar an %%due_date%%."
-od_get_title = "Íoslódáil Overdrive"
+od_get_title = "Íoslódáil OverDrive"
 od_gettitle_failure = "Níorbh fhéidir an teideal seo a íoslódáil."
-od_help_linktext = "Cabhair Overdrive"
-od_history = "Stair Overdrive"
-od_hold = "Coinneáil Overdrive"
+od_help_linktext = "Cabhair OverDrive"
+od_history = "Stair OverDrive"
+od_hold = "Coinneáil OverDrive"
 od_hold_cancel_failure = "Theip ar an iarratas leis an gcoinneáil a chur ar ceal."
 od_hold_cancel_success = "Cuireadh an choinneáil ar ceal go rathúil."
 od_hold_email = "Seoladh r-phoist le haghaidh an fhógra coinneála: %%holdEmailAddress%%."
@@ -940,12 +940,12 @@ od_hold_place_failure = "Theip ar an iarratas coinneála."
 od_hold_place_success = "Tá conneáil curtha ar an teideal seo. Tá tú sa %%holdListPosition%%ú háit sa scuaine coinneála"
 od_hold_placed_on = "Cuireadh an choinneáil ar an %%holdPlacedDate%%."
 od_hold_queue = "%%holdPosition%% as %%líonOfHolds%% i scuaine na gcoinneálacha."
-od_holds = "Coinneálacha Overdrive"
+od_holds = "Coinneálacha OverDrive"
 od_info_unavail = "Níl fáil ar an bhfaisnéis seo faoi láthair."
 od_is_checkedout = "Tá an teideal seo seiceáilte amach agat.  Beidh sé dlite ar an %%due_date%%."
 od_is_on_hold = "Tá coinneáil curtha ar an teideal seo agat."
-od_loans = "Iasachtaí Overdrive"
-od_mycontent_help = 'Le faisnéis a fháil faoi na teidil seo agus le cúnamh a fháil le hiad a íoslódáil, breathnaigh ar <a href="%%url%%">Cabhair Overdrive</a>.'
+od_loans = "Iasachtaí OverDrive"
+od_mycontent_help = 'Le faisnéis a fháil faoi na teidil seo agus le cúnamh a fháil le hiad a íoslódáil, breathnaigh ar <a href="%%url%%">Cabhair OverDrive</a>.'
 od_none_found = "Níor aimsíodh aon teidil."
 od_return_failure = "Níorbh fhéidir an teideal seo a thabhairt ar ais."
 od_return_success = "Tá an teideal seo tugtha ar ais."
