--- a/languages/hy.ini
+++ b/languages/hy.ini
@@ -895,7 +895,7 @@ number_decimal_point = "."
 number_thousands_separator = ","
 OAI Server = "OAI կայան"
 Occupation = "Զբաղմունք"
-od_account_noaccess = "Գրադարանի այս քարտը հասանելի չէ Overdrive-ի բովանդակությանը"
+od_account_noaccess = "Գրադարանի այս քարտը հասանելի չէ OverDrive-ի բովանդակությանը"
 od_account_problem = "Ձեր հաշվի հետ կապված խնդիր կա. %%message%%"
 od_audiobook-mp3 = "MP3 աուդիոգիրք"
 od_audiobook-overdrive = "OverDrive Listen աուդիոգիրք"
@@ -903,24 +903,24 @@ od_avail_avail = "Հասանելի է:"
 od_avail_holds = "Պահումներ:"
 od_avail_total = "Ընդհանուր օրինակներ:"
 od_but_cancel_hold = "Չեղարկեք այս պահումը"
-od_but_checkout = "Տացք Overdrive-ի միջոցով"
+od_but_checkout = "Տացք OverDrive-ի միջոցով"
 od_but_checkout_s = "Տացք"
 od_but_gettitle = "Ներբեռնեք այս բովանդակությունը"
 od_but_gettitle_s = "Ներբեռնեք"
-od_but_hold = "Տեղադրեք պահում Overdrive-ի միջոցով"
+od_but_hold = "Տեղադրեք պահում OverDrive-ի միջոցով"
 od_but_hold_s = "Տեղադրեք պահում"
 od_but_return = "Վերադարձեք այս վերնագիրը"
-od_cancel_hold = "Չեղարկել Overdrive պահումը"
-od_checkout = "Overdrive տացք"
-od_code_connection_failed = "Overdrive-ին միացումը ձախողվեց: Եթե խնդիրը չվերանա, դիմեք ձեր գրադարանին:"
+od_cancel_hold = "Չեղարկել OverDrive պահումը"
+od_checkout = "OverDrive տացք"
+od_code_connection_failed = "OverDrive-ին միացումը ձախողվեց: Եթե խնդիրը չվերանա, դիմեք ձեր գրադարանին:"
 od_code_contentnotavail = "Այս բովանդակությունը հասանելի չէ ձեր տարածքում:"
 od_code_login_for_avail = "Մուտք գործեք հասանելիության համար"
 od_code_resource_not_found = "Վերնագիրը չի գտնվել"
-od_content = "Overdrive բովանդակություն"
+od_content = "OverDrive բովանդակություն"
 od_dl_formats = "Աջակցվող ներբեռնման ձևաչափեր"
 od_docheckout_failure = "Այս վերնագիրը չհաջողվեց սպասարկել:"
 od_docheckout_success = "Այս վերնագիրը ձեզ է սպասարկվել: Ժամկետը սպառվում է %%expireDate%%"
-od_early_return = "Overdrive վաղ վերադարձ"
+od_early_return = "OverDrive վաղ վերադարձ"
 od_ebook-epub-adobe = "Adobe EPUB էլ․գիրք"
 od_ebook-epub-open = "Բացեք EPUB էլ․գիրք"
 od_ebook-kindle = "Kindle գիրք"
@@ -929,11 +929,11 @@ od_ebook-overdrive = "OverDrive Read էլ․գիրք"
 od_ebook-pdf-adobe = "Adobe PDF էլ․գիրք"
 od_ebook-pdf-open = "Open PDF էլ․գիրք"
 od_expires_on = "Այս վերնագրի ժամկետը սպառվում է %%due_date%%."
-od_get_title = "Overdrive ներբեռնում"
+od_get_title = "OverDrive ներբեռնում"
 od_gettitle_failure = "Այս վերնագիրը չհաջողվեց ներբեռնել:"
-od_help_linktext = "Overdrive օգնություն"
-od_history = "Overdrive պատմություն"
-od_hold = "Overdrive պահում"
+od_help_linktext = "OverDrive օգնություն"
+od_history = "OverDrive պատմություն"
+od_hold = "OverDrive պահում"
 od_hold_cancel_failure = "Պահման չեղարկման հարցումը ձախողվեց:"
 od_hold_cancel_success = "Պահումը հաջողությամբ չեղարկվեց:"
 od_hold_email = "Էլ․ փոստի հասցե պահման ծանուցման համար: %%holdEmailAddress%%."
@@ -942,12 +942,12 @@ od_hold_place_failure = "Պահման հարցումը ձախողվեց:"
 od_hold_place_success = "Այս վերնագիրը պահման է դրված: Ձեր պահման դիրքն է %%holdListPosition%%"
 od_hold_placed_on = "Պահում է դրված %%holdPlacedDate%%."
 od_hold_queue = "Դիրք %%holdPosition%% ընդ․ %%numberOfHolds%% պահման հերթում։"
-od_holds = "Overdrive պահումներ"
+od_holds = "OverDrive պահումներ"
 od_info_unavail = "Այս տեղեկատվությունը ներկայումս անհասանելի է:"
 od_is_checkedout = "Դուք սպասարկել եք այս վերնագիրը: Վերադարձ %%due_date%%."
 od_is_on_hold = "Այս վերնագիրը պահման մեջ է։"
-od_loans = "Overdrive վարկեր"
-od_mycontent_help = 'Այս վերնագրերը ներբեռնելու մասին տեղեկությունների և օգնության համար տե՛ս <a href="%%url%%">Overdrive օգնություն</a>։'
+od_loans = "OverDrive վարկեր"
+od_mycontent_help = 'Այս վերնագրերը ներբեռնելու մասին տեղեկությունների և օգնության համար տե՛ս <a href="%%url%%">OverDrive օգնություն</a>։'
 od_none_found = "Չկան գտնված վերնագրեր։"
 od_return_failure = "Այս վերնագիրը չի կարող վերադարձվել:"
 od_return_success = "Այս վերնագիրը վերադարձվել է։"
