--- a/languages/se.ini
+++ b/languages/se.ini
@@ -812,7 +812,7 @@ number_decimal_point = ","
 number_thousands_separator = " "
 OAI Server = "OAI-server"
 Occupation = "Ámmát"
-od_account_noaccess = "Dán girjerájus ii leat beassan Overdrive-sisdollui"
+od_account_noaccess = "Dán girjerájus ii leat beassan OverDrive-sisdollui"
 od_account_problem = "Du konttus lea čuolbma. %%message%%"
 od_audiobook-mp3 = "MP3-jietnagirji"
 od_audiobook-overdrive = "OverDrive Guldal jietnagirjji"
@@ -820,24 +820,24 @@ od_avail_avail = "Oažžunsajis:"
 od_avail_holds = "Várrejumit:"
 od_avail_total = "Stuhkat oktiibuot :"
 od_but_cancel_hold = "Šluhtte várrema"
-od_but_checkout = "Luoikkat Overdrives"
+od_but_checkout = "Luoikkat OverDrives"
 od_but_checkout_s = "Luoikkat"
 od_but_gettitle = "Ládde dán sisdoalu"
 od_but_gettitle_s = "Ládde"
-od_but_hold = "Várre Overdrives"
+od_but_hold = "Várre OverDrives"
 od_but_hold_s = "Várre"
 od_but_return = "Máhcat luoikkaheami"
-od_cancel_hold = "Šluhtte Overdrive-várrema"
-od_checkout = "Overdrive-luoikkaheapmi"
-od_code_connection_failed = "Oktavuohta Overdrivei ii lihkostuvvan. Juos dilli joatkahuvvá, váldde oktavuođa girjerádjui."
+od_cancel_hold = "Šluhtte OverDrive-várrema"
+od_checkout = "OverDrive-luoikkaheapmi"
+od_code_connection_failed = "Oktavuohta OverDrivei ii lihkostuvvan. Juos dilli joatkahuvvá, váldde oktavuođa girjerádjui."
 od_code_contentnotavail = "Dát sisdoallu ii lea oažžunsajis guovllustat."
 od_code_login_for_avail = "Čálihuva sisa vai oainnát oažžasuvvama"
 od_code_resource_not_found = "Namahus ii gávdnon"
-od_content = "Overdrive-sisdoallu"
+od_content = "OverDrive-sisdoallu"
 od_dl_formats = "Dorjojuvvon láddenhámit"
 od_docheckout_failure = "Namahusa luoikkaheapmi ii lihkostuvvan."
 od_docheckout_success = "Namahus lea luoikkahuvvon dutnje. Luoikkaheapmi nohká %%expireDate%%"
-od_early_return = "Máhcat Overdrive-luoikkaheami ovdal áigemeari"
+od_early_return = "Máhcat OverDrive-luoikkaheami ovdal áigemeari"
 od_ebook-epub-adobe = "Adobe EPUB -šleađgagirji"
 od_ebook-epub-open = "Open EPUB -šleađgagirji"
 od_ebook-kindle = "Kindle Book"
@@ -846,11 +846,11 @@ od_ebook-overdrive = "OverDrive Read -šleađgagirji"
 od_ebook-pdf-adobe = "Adobe PDF -šleađgagirji"
 od_ebook-pdf-open = "Open PDF -šleađgagirji"
 od_expires_on = "Namahus boarásnuvvá %%due_date%%."
-od_get_title = "Overdrive-ládden"
+od_get_title = "OverDrive-ládden"
 od_gettitle_failure = "Namahus ii sáhttán láddejuvvot."
-od_help_linktext = "Overdrive-oahpistanmearka"
-od_history = "Overdrive-historjá"
-od_hold = "Overdrive-várren"
+od_help_linktext = "OverDrive-oahpistanmearka"
+od_history = "OverDrive-historjá"
+od_hold = "OverDrive-várren"
 od_hold_cancel_failure = "Várrema šluhtten ii lihkostuvvan."
 od_hold_cancel_success = "Várren lea šluhttejuvvon."
 od_hold_email = "Šleađgaboastačujuhus várrenilmmuhussii: %%holdEmailAddress%%."
@@ -859,12 +859,12 @@ od_hold_place_failure = "Várrenbivdda ii lihkostuvvan."
 od_hold_place_success = "Dus lea várren dán girjái. Du báiki várrenráiddus lea %%holdListPosition%%"
 od_hold_placed_on = "Várren dahkkojuvvon %%holdPlacedDate%%."
 od_hold_queue = "Sajádat várrenráiddus lea %%holdPosition%% / %%numberOfHolds%%."
-od_holds = "Overdrive-várremat"
+od_holds = "OverDrive-várremat"
 od_info_unavail = "Dát diehtu ii leat aiddo dál oažžumis."
 od_is_checkedout = "Dus lea dát girji luoikasis. Dan earrebeaivi lea %%due_date%%."
 od_is_on_hold = "Dus lea dát girji luoikasis."
-od_loans = "Overdrive-luoikkaheamit"
-od_mycontent_help = 'Dieđuid oažžuma dihte dáid girjjiid láddemis ja geavaheamis, geahča <a href="%%url%%">Overdrive Help</a>.'
+od_loans = "OverDrive-luoikkaheamit"
+od_mycontent_help = 'Dieđuid oažžuma dihte dáid girjjiid láddemis ja geavaheamis, geahča <a href="%%url%%">OverDrive Help</a>.'
 od_none_found = "Girjjit eai gávdnon."
 od_return_failure = "Girjji ii sáhttán máhcahit."
 od_return_success = "Girji lea máhcahuvvon."
